--- a/The Corruption/index.html
+++ b/The Corruption/index.html
@@ -5,7 +5,7 @@
 <title>The Corruption</title>
 <script src="js/main.js" type="module"></script>
 <style>
-body{margin:0;background:black;}
+body{margin:0;background:black;touch-action:manipulation;}
 canvas{display:block;margin:auto;}
 </style>
 </head>
