--- a/The Corruption/index.html
+++ b/The Corruption/index.html
@@ -5,8 +5,7 @@
 <title>The Corruption</title>
 <script src="js/main.js" type="module"></script>
 <style>
-body{margin:0;background:black;touch-action:manipulation;}
-canvas{display:block;margin:auto;}
+body{width:100vw;height:100vh;margin:0;background:black;touch-action:manipulation;display:flex;align-items:center;justify-content:center;cursor:url(cur.png),default;}
 </style>
 </head>
 <body></body>
