--- a/The Corruption/index.html
+++ b/The Corruption/index.html
@@ -5,8 +5,8 @@
 <title>The Corruption</title>
 <script src="js/main.js" type="module"></script>
 <style>
-body{width:100vw;height:100vh;margin:0;background:black;touch-action:manipulation;display:flex;align-items:center;justify-content:center;cursor:url(cur.png),default;}
+body{width:100vw;height:100vh;margin:0;background:black;color:white;touch-action:manipulation;display:flex;align-items:center;justify-content:center;cursor:url(cur.png),default;}
 </style>
 </head>
-<body></body>
+<body>加载代码</body>
 </html>
