--- a/The Corruption/index.html
+++ b/The Corruption/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>The Corruption</title>
+<link rel="icon" href="favicon.ico" />
 <script src="js/main.js" type="module"></script>
 <style>
 body{width:100vw;height:100vh;margin:0;background:black;color:white;touch-action:manipulation;display:flex;align-items:center;justify-content:center;cursor:url(cur.png),default;}
