--- a/The Corruption/index.html
+++ b/The Corruption/index.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <title>The Corruption</title>
 <link rel="icon" href="favicon.ico" />
+<script type="importmap">
+  {
+    "imports": {
+      "linkedList": "/lib/linkedList.js",
+      "/": "/The Corruption/js/"
+    }
+  }
+</script>
 <script src="js/main.js" type="module"></script>
 <style>
 body{width:100vw;height:100vh;margin:0;background:black;color:white;touch-action:manipulation;display:flex;align-items:center;justify-content:center;cursor:url(cur.png),default;}
