--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<style>
-a{
-  display:inline-block;
-  margin:20px;
-  padding:10px 15px;
-  background:purple;
-  border-radius:5px;
-  font-size:20px;
-  color:white;
-  text-decoration:none;
-  transition:0.5s;
- }
-a:hover,a:active{background:#c6c;box-shadow:0 0 10px #c6c;}
-</style>
-<a href="The Corruption">The Corruption</a>
+<h1>正在施工</h1>
